--- a/dmr.gl/dmr.gl.csproj
+++ b/dmr.gl/dmr.gl.csproj
@@ -64,7 +64,9 @@
     <Compile Include="MainWindow.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Renderers\ShaderProgram.cs" />
     <Compile Include="Renderers\TerrainRenderer.cs" />
+    <Compile Include="Renderers\Texture2D.cs" />
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -100,6 +102,11 @@
       <Project>{92b4f6ff-a00d-4f78-a98b-c9158066646c}</Project>
       <Name>dmr</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Content\Graphics\walls.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
